fix: scrollbar should always be sticky on top

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -197,12 +197,11 @@
     border-radius: $base-border-radius;
     max-height: $max-dropdown-height;
     background-color: $white;
-    overflow-y: auto;
 }
 
 .simple-tree-node-container {
     overflow-y: overlay;
-    height: fit-content;
+    max-height: calc(100% - #{$base-size * 5});
 
     .simple-tree-node-wrapper {
         display: flex;
